# climaAustralia

./: .dockerignore  .gitignore  Dockerfile  cron.js  generar_dato.py  insertar_prediccion.py  requirements.txt
.dvc/: config
backend/: .env  app.py  crearTablas.js  dashboard.html  hoy.html  index-ignorar.js  index.html  index.js  package copy.json  package-lock.json  package.json
frontend/: index.html
kedroclima/: README.md  predict_rainfall.py  pyproject.toml
kedroclima/conf/base/: catalog.yml  parameters.yml  parameters_clasificacion_rf.yml  parameters_codificacion_split.yml  parameters_exploracion.yml  parameters_preparacion.yml  parameters_regresion_ridge.yml
kedroclima/notebooks/: main.ipynb
kedroclima/src/kedroclima/: __init__.py  __main__.py  pipeline_registry.py  settings.py
kedroclima/src/kedroclima/pipelines/clasificacion_rf/: __init__.py  nodes.py  pipeline.py
kedroclima/src/kedroclima/pipelines/codificacion_split/: __init__.py  nodes.py  pipeline.py
kedroclima/src/kedroclima/pipelines/exploracion/: __init__.py  nodes.py  pipeline.py
kedroclima/src/kedroclima/pipelines/preparacion/: __init__.py  nodes.py  pipeline.py
kedroclima/src/kedroclima/pipelines/regresion_ridge/: __init__.py  nodes.py  pipeline.py
kedroclima/tests/pipelines/clasificacion_rf/: test_pipeline.py
kedroclima/tests/pipelines/codificacion_split/: test_pipeline.py
kedroclima/tests/pipelines/exploracion/: test_pipeline.py
kedroclima/tests/pipelines/preparacion/: test_pipeline.py
kedroclima/tests/pipelines/regresion_ridge/: test_pipeline.py
(+4 files in other folders)
